Fix button size on mobile

--- a/src/styles/_fixed-at-bottom.sass
+++ b/src/styles/_fixed-at-bottom.sass
@@ -12,10 +12,13 @@
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4)
 
 .fixed-at-bottom-button
+  display: flex
+  align-items: center
+  justify-content: center
   background-color: $accent
   color: $title-color
-  padding: 5px 10px
-  height: 29px
+  height: 28px
+  width: 28px
   margin-right: 5px
 
 .grift-counter
@@ -105,6 +108,11 @@
 
     .input-group
       align-items: baseline
+
+@media only screen and (max-width: #{$md-breakpoint}px)
+  .fixed-at-bottom-button
+    height: 26px
+    width: 26px
 
 @media (prefers-color-scheme: dark)
   .grift-counter, .fixed-at-bottom-button
